--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --watch"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,6 +33,8 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0"
+    "@testing-library/react": "^13.2.0",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3"
   }
 }
